--- a/templates/class.php.twig
+++ b/templates/class.php.twig
@@ -70,7 +70,9 @@ use {{ use }};
      */
     public function add{{ field.name|singularize|ucfirst }}({% if field.typeHint and not field.isEnum %}{{ field.adderRemoverTypeHint }} {% endif %}${{ field.name|singularize }}): {% if config.fluentMutatorMethods %}self{% else %}void{% endif %}
     {
-        $this->{{ field.name }}[] = {% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }};
+        if (!$this->{{ field.name }}->containsElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
+            $this->{{ field.name }}->add({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }});
+        }
 {% if config.fluentMutatorMethods %}
 
         return $this;
@@ -85,7 +87,9 @@ use {{ use }};
     public function remove{{ field.name|singularize|ucfirst }}({% if field.typeHint %}{{ field.adderRemoverTypeHint }} {% endif %}${{ field.name|singularize }}): {% if config.fluentMutatorMethods %}self{% else %}void{% endif %}
     {
 {% if config.doctrine.useCollection and field.isArray and field.typeHint and not field.isEnum %}
-        $this->{{ field.name }}->removeElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }});
+        if ($this->{{ field.name }}->containsElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
+            $this->{{ field.name }}->removeElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }});
+        }
 {% else %}
         $key = array_search({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }}, $this->{{ field.name }}, true);
         if (false !== $key) {
