--- a/templates/knp-translation.php.twig
+++ b/templates/knp-translation.php.twig
@@ -16,18 +16,11 @@ namespace {{ class.namespace }};
 use {{ use }};
 {% endfor %}
 
-/**
-{% for annotation in class.annotations %}
- * {{ annotation }}
-{% endfor %}
- */
-{% if class.abstract %}abstract {% endif %}class {{ class.name }}{% if class.parent %} extends {{ class.parent }}{% endif %}{% if class.interfaceName %} implements {{ class.interfaceName }}{% endif %}
+{% if class.abstract %}abstract {% endif %}class {{ class.name }}Translation
 
 {
-{% if class.isTranslated %}
-    use Translatable;
+    use Translation;
 
-{% endif %}
 {% for constant in class.constants %}
     /**
 {% for annotation in constant.annotations %}
@@ -37,7 +30,7 @@ use {{ use }};
     const {{ constant.name }} = '{{ constant.value }}';
 
 {% endfor %}
-{% for field in class.fields if not field.isTranslated %}
+{% for field in class.fields if field.isTranslated %}
     /**
 {% for annotation in field.annotations %}
      * {{ annotation }}
@@ -46,23 +39,8 @@ use {{ use }};
     {{ config.fieldVisibility }} ${{ field.name }}{% if field.isArray and (field.isEnum or not field.typeHint or not config.doctrine.useCollection) %} = []{% endif %};
 
 {% endfor %}
-{% if config.doctrine.useCollection and class.hasConstructor %}
-    public function __construct()
-    {
-{% if class.parentHasConstructor %}
-        parent::__construct();
-{% endif %}
-{% for field in class.fields %}
-{% if config.doctrine.useCollection and field.isArray and field.typeHint and not field.isEnum %}
-
-        $this->{{ field.name }} = new ArrayCollection();
-{% endif %}
-{% endfor %}
-    }
-
-{% endif %}
 {% if config.accessorMethods %}
-{% for field in class.fields %}
+{% for field in class.fields if field.isTranslated %}
 {% if field.isWritable %}
 {% if field.isArray %}
     /**
@@ -117,11 +95,7 @@ use {{ use }};
         }
 
 {% endif %}
-{% if field.isTranslated and config.translation == 'knp' %}
-        $this->proxyCurrentLocaleTranslation(__METHOD__, func_get_args());
-{% else %}
         $this->{{ field.name }} = ${{ field.name }};
-{% endif %}
 {% if config.fluentMutatorMethods %}
 
         return $this;
@@ -138,11 +112,7 @@ use {{ use }};
      */
     public function get{{ field.name|ucfirst }}(){% if field.typeHint %}: {% if field.isNullable and not field.isArray %}?{% endif %}{{ field.typeHint }}{% endif %}
     {
-{% if field.isTranslated and config.translation == 'knp' %}
-        return $this->proxyCurrentLocaleTranslation(__METHOD__, func_get_args());
-{% else %}
         return $this->{{ field.name }};
-{% endif %}
     }
 
 {% endif %}
