fix collection methods

--- a/templates/class.php.twig
+++ b/templates/class.php.twig
@@ -72,7 +72,7 @@ use {{ use }};
      */
     public function add{{ field.name|singularize|ucfirst }}({% if field.typeHint and not field.isEnum %}{{ field.adderRemoverTypeHint }} {% endif %}${{ field.name|singularize }}): {% if config.fluentMutatorMethods %}self{% else %}void{% endif %}
     {
-        if (!$this->{{ field.name }}->containsElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
+        if (!$this->{{ field.name }}->contains({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
             $this->{{ field.name }}->add({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }});
         }
 {% if config.fluentMutatorMethods %}
@@ -89,7 +89,7 @@ use {{ use }};
     public function remove{{ field.name|singularize|ucfirst }}({% if field.typeHint %}{{ field.adderRemoverTypeHint }} {% endif %}${{ field.name|singularize }}): {% if config.fluentMutatorMethods %}self{% else %}void{% endif %}
     {
 {% if config.doctrine.useCollection and field.isArray and field.typeHint and not field.isEnum %}
-        if ($this->{{ field.name }}->containsElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
+        if ($this->{{ field.name }}->contains({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }})) {
             $this->{{ field.name }}->removeElement({% if field.isEnum %}(string) {% endif %}${{ field.name|singularize }});
         }
 {% else %}
@@ -117,7 +117,7 @@ use {{ use }};
         }
 
 {% endif %}
-{% if field.isTranslated and config.translation == 'knp' %}
+{% if field.isTranslated and config.translationMethod == 'knp' %}
         $this->proxyCurrentLocaleTranslation(__METHOD__, func_get_args());
 {% else %}
         $this->{{ field.name }} = ${{ field.name }};
@@ -138,7 +138,7 @@ use {{ use }};
      */
     public function get{{ field.name|ucfirst }}(){% if field.typeHint %}: {% if field.isNullable and not field.isArray %}?{% endif %}{{ field.typeHint }}{% endif %}
     {
-{% if field.isTranslated and config.translation == 'knp' %}
+{% if field.isTranslated and config.translationMethod == 'knp' %}
         return $this->proxyCurrentLocaleTranslation(__METHOD__, func_get_args());
 {% else %}
         return $this->{{ field.name }};
