--- a/templates/class.php.twig
+++ b/templates/class.php.twig
@@ -21,7 +21,7 @@ use {{ use }};
  * {{ annotation }}
 {% endfor %}
  */
-{% if class.abstract %}abstract {% endif %}class {{ class.name }}{% if class.parent %} extends {{ class.parent }}{% endif %}{% if class.interfaceName %} implements {{ class.interfaceName }}{% endif %}
+{% if class.abstract %}abstract {% endif %}class {{ class.name }}{% if class.parent %} extends {{ class.parent }}{% endif %}{% if class.interfaces|length %} implements {% for interface in class.interfaces %}{{ interface }}{% if not loop.last %}, {% endif %}{% endfor %}{% endif %}
 
 {
 {% if class.isTranslated %}
